<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BlowThem</string>
    <string name="action_settings">Settings</string>
    <string name="start_game">Play on Internet</string>
    <string name="game_settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="nickname">Nickname : </string>
    <string name="password">Password : </string>
    <string name="mail">Mail : </string>
    <string name="p2p_button">Play on WI-FI</string>
</resources>
