<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/MainMenu">

    <TextView
        android:layout_marginTop="50dp"
        android:id="@+id/menulabel"
        android:text="@string/menu"
        style="@style/menu_label"/>

    <Button
        android:id="@+id/login"
        android:text="@string/login"
        android:background="@drawable/main_menu_button"
        style="@style/main_menu_text"/>

    <Button
        android:id="@+id/registration"
        android:text="@string/registration"
        android:background="@drawable/main_menu_button"
        style="@style/main_menu_text"/>

</LinearLayout>